<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="0dp"
        app:title="@string/app_name"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/page_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                app:cardElevation="10dp"
                app:cardCornerRadius="20dp"
                android:layout_marginTop="5dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="15dp">
                    <ImageView
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:src="@drawable/darwin"
                        android:id="@+id/img1"
                        android:contentDescription="@string/app_name" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/darwin_title"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="5dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/dark_color"
                        />
                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/darwin_text"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textSize="15sp"
                        android:layout_gravity="bottom|center_horizontal"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                app:cardElevation="10dp"
                app:cardCornerRadius="20dp"
                android:layout_marginTop="5dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <ImageView
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:src="@drawable/curie"
                        android:id="@+id/img2"
                        android:contentDescription="@string/app_name" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/curie_title"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="5dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/dark_color"
                        />
                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/curie_text"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textSize="15sp"
                        android:layout_gravity="bottom|center_horizontal"
                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                app:cardElevation="10dp"
                app:cardCornerRadius="20dp"
                android:layout_marginTop="5dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <ImageView
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:src="@drawable/einstein"
                        android:id="@+id/img3"
                        android:contentDescription="@string/app_name" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/einstein_title"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="5dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/dark_color"
                        />
                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/einstein_text"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textSize="15sp"
                        android:layout_gravity="bottom|center_horizontal"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                app:cardElevation="10dp"
                app:cardCornerRadius="20dp"
                android:layout_marginTop="5dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <ImageView
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:src="@drawable/fleming"
                        android:id="@+id/img4"
                        android:contentDescription="@string/app_name" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fleming_title"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="5dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/dark_color"
                        />
                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/fleming_text"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textSize="15sp"
                        android:layout_gravity="bottom|center_horizontal"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                app:cardElevation="10dp"
                app:cardCornerRadius="20dp"
                android:layout_marginTop="5dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="15dp">
                    <ImageView
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:src="@drawable/galilei"
                        android:id="@+id/img5"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/galilei_title"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="5dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/dark_color"
                        />
                    <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/galilei_text"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textSize="15sp"
                        android:layout_gravity="bottom|center_horizontal"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>



        </LinearLayout>
    </ScrollView>


</LinearLayout>